# smallsite_playground

./: .dockerignore  .gitignore  Dockerfile  README.md  busyitup.sh  pyproject.toml  smallsite_app.py
src/smallsite/: __main__.py  app.py  routes.py
