[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smallsite"
version = "0.1.0"
description = "Just a small site"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyramid>=2.1",
    "waitress>=3.0.2",
]

[dependency-groups]
deploy = []
