[build-system]
requires = ["setuptools==81.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smallsite"
version = "0.1.0"
description = "Just a small site"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "flask>=3.1.3",
    "waitress>=3.0.2",
]

[dependency-groups]
docker = [
    "nuitka>=4.1.2",
]
